# Analytics-Engineer-Upsun-Take-Home-Challenge-Bernat-Morros

Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/: README.md  pyproject.toml  requirements.txt
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/outputs/: calculation_summary.json  growth_targets.csv  portfolio_summary.csv  product_coverage.csv  product_mix.csv  project_emissions_exact.csv  project_hotspots.csv  project_match_flag.csv  reduction_levers.csv  region_proxy_intensity.csv  source_audit.json  source_notes.json  unallocated_bill_overhead.csv  usage_coverage.csv  usage_mix.csv
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/scripts/: plot_metrics_charts.py  run_case_analysis.py
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/src/co2_case/: __init__.py  charts.py  cleaning.py  config.py  io.py  metrics.py  modeling.py
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/src/co2_case/sql/: dbt_project.yml
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/src/co2_case/sql/models/marts/: fct_project_emissions_exact.sql  fct_unallocated_bill_overhead.sql  mart_growth_targets.sql  mart_portfolio_summary.sql  mart_region_proxy_intensity.sql  schema.yml
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/src/co2_case/sql/models/staging/: _sources.yml  schema.yml  stg_bill_skus.sql  stg_project_sku_usage.sql
Analytics Engineer -Upsun Take Home Challenge - Bernat Morros/tests/: test_invariants.py
