[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "co2-case"
version = "0.1.0"
description = "Refined CO2 allocation take-home case"
requires-python = ">=3.11"
dependencies = ["pandas>=2.2", "openpyxl>=3.1", "numpy>=2.0", "matplotlib>=3.8"]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
